external-crates/move/crates/move-compiler/tests/move_2024/naming/positional_pack_fn_call_shadow.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_2024/naming/positional_pack_fn_call_shadow.move:5:9
  │
3 │     public struct Foo(u64) has copy, drop;
  │                   --- Alias previously defined here
4 │ 
5 │     fun Foo(_x: u64) { }
  │         ^^^ Duplicate module member or alias 'Foo'. Top level names in a namespace must be unique
